# practical-web-dev-ghc

./:    CHANGELOG.md  LICENSE  practical-web-dev-ghc.cabal
.github/workflows/: haskell.yml
app/: Main.hs
src/: Logger.hs  MyLib.hs
src/Adapter/InMemory/: Auth.hs
src/Adapter/PostgreSQL/: 00000_auths.sql  Auth.hs
src/Adapter/PostgreSQL/Migrations/: 00000_auths.sql
src/Adapter/RabbitMQ/: Auth.hs  Common.hs
src/Adapter/Redis/: Auth.hs
src/Domain/: Auth.hs  Validation.hs
