cabal-version:      3.14
name:               practical-web-dev-ghc
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Rajkumar Natarajan
maintainer:         rajkumar.natarajan@webdev.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
                    , Logger
                    , Domain.Auth
                    , Domain.Validation
                    , Adapter.InMemory.Auth

    default-extensions: ConstraintKinds
                      , FlexibleContexts
                      , NoImplicitPrelude
                      , OverloadedStrings
                      , QuasiQuotes
                      , TemplateHaskell

    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.21.0.0
                    , katip >= 0.8.8.2
                    , string-random == 0.1.4.4
                    , mtl
                    , data-has
                    , classy-prelude
                    , pcre-heavy
                    , time
                    , time-lens
                    
    hs-source-dirs:   src
    default-language: GHC2024

executable practical-web-dev-ghc
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.21.0.0,
        practical-web-dev-ghc

    hs-source-dirs:   app
    default-language: GHC2024

test-suite practical-web-dev-ghc-test
    import:           warnings
    default-language: GHC2024
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.21.0.0,
        practical-web-dev-ghc
